Thu, Apr 18, 2024, 12:39 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -139,8 +139,10 @@
 
                                 if (responset !== ''){
                                     strresponse = '#response' + id
-                                    document.querySelector('#response').innerHTML = strresponse;
+                                    fetchlist(id);
+                                    document.querySelector(strresponse).innerHTML = responset;
                                 }
+                                else
                                     fetchlist();
                             }
 
