Thu, Apr 18, 2024, 12:41 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -139,11 +139,11 @@
 
                                 if (responset !== ''){
                                     strresponse = '#response' + id
-                                    fetchlist(id);
+//                                    fetchlist(id);
                                     document.querySelector(strresponse).innerHTML = responset;
                                 }
                                 else
-                                    fetchlist();
+//                                    fetchlist();
                             }
 
                             // addlistener to main submit button
