Thu, Apr 18, 2024, 12:44 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -139,7 +139,7 @@
 
                                 if (responset !== ''){
                                     strresponse = '#response' + id
-                                    fetchlist(id);
+//                                    fetchlist(id);
                                     document.querySelector(strresponse).innerHTML = responset;
                                 }
  //                               else
