Thu, Apr 18, 2024, 12:46 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -139,11 +139,10 @@
 
                                 if (responset !== ''){
                                     strresponse = '#response' + id
-//                                    fetchlist(id);
                                     document.querySelector(strresponse).innerHTML = responset;
                                 }
- //                               else
- //                                   fetchlist();
+                                else
+                                    fetchlist();
                             }
 
                             // addlistener to main submit button
