Thu, Apr 18, 2024, 12:55 PM +08:00

--- a/birthdays/static/styles.css
+++ b/birthdays/static/styles.css
@@ -52,12 +52,12 @@ body {
 }
 
 .nameget {
-    text-align: center;
+    text-align: left;
     font-size: 15px;
 }
 
 .dateget {
-    text-align: center;
+    text-align: left;
     font-size: 18px;
 }
 
