Thu, Apr 18, 2024, 1:00 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -56,6 +56,7 @@
                                                         <button id="del${birthday.id}">Delete</button>
                                                         <button id="edit${birthday.id}">Edit</button>
                                                     </td>
+                                                    <td></td>
                                                 </tr>`
                                     }
                                     else
@@ -68,6 +69,7 @@
                                                         <button id="editsubmit">Submit</button>
                                                         <button id="cancelsubmit">Cancel</button>
                                                     </td>
+                                                    <td id="response${birthday.id}"></td>
                                                 </tr>`
                                     }
 
