Thu, Apr 18, 2024, 1:08 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -50,7 +50,7 @@
                                     if ((id === undefined) || (id !== birthday.id))
                                     {
                                         html += `<tr>
-                                                    <td>${birthday.name}</th><th>${birthday.day} ${months[birthday.month - 1]}</td>
+                                                    <td>${birthday.name}</td><td>${birthday.day} ${months[birthday.month - 1]}</td>
                                                     <td>
                                                         <input type="hidden" name="id" value="${birthday.id}">
                                                         <button id="del${birthday.id}">Delete</button>
