--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -5,17 +5,20 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/register" method="post">
+
         <div class="mb-3">
-            <input autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
+            <input id="regname" autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
+            <input id="regpw" class="form-control mx-auto w-auto" name="password" placeholder="Password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" name="confirmation" placeholder="Re-enter password" type="password">
+            <input id="regcom" class="form-control mx-auto w-auto" name="confirmation" placeholder="Re-enter password" type="password">
         </div>
-        <button class="btn btn-primary" type="submit">Register</button>
-    </form>
+        <button id="regbutton" class="btn btn-primary" type="submit">Register</button>
     <p></p>
+    <script>
+        
+
+    </script>
 {% endblock %}
