Thu, Apr 18, 2024, 10:04 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -21,7 +21,7 @@
         let reg = {}
         reg['name'] = document.querySelector('#regname').value;
         let regbutton = document.querySelector('#regbutton');
-        regbutton.addListener("click", function() {
+        regbutton.addEventListener("click", function() {
 
             document.querySelector("#status").innerHTML = reg['name'];
         });
