--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -21,8 +21,7 @@
         let reg = {}
         reg['name'] = document.querySelector('#regname').value;
         let regbutton = document.querySelector('#regbutton');
-        regbutton.addEventListener("click", function() {
-
+        regbutton.addEventListener('click', function() {
             document.querySelector("#status").innerHTML = reg['name'];
         });
 
