Thu, Apr 18, 2024, 10:14 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -18,9 +18,12 @@
         <button id="regbutton" class="btn btn-primary" type="submit">Register</button>
     <p id="status"></p>
     <script>
-
-            document.querySelector('#status').innerHTML = hi;
-  
+        let reg = {}
+        reg['name'] = document.querySelector('#regname').value;
+        let regbutton = document.querySelector('#regbutton');
+        regbutton.addEventListener('click', function() {
+            document.querySelector('#status').innerHTML = reg['name'];
+        });
 
     </script>
 {% endblock %}
