Thu, Apr 18, 2024, 10:15 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 
-        <div class="mb-3">
+        <div class="mb-3">e
             <input id="regname" autocomplete="off" autofocus class="form-control mx-auto w-auto" name="username" placeholder="Username" type="text">
         </div>
         <div class="mb-3">
