Fri, Apr 19, 2024, 10:33 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -123,7 +123,7 @@
                                 //let strparam = '/add?name=' + name + '&date=' + date;
                                 let response = await fetch('/add', {
                                     method:'GET',
-                                    headers: {
+                                    body: {
                                         'name': name,
                                         'date': date
                                         }
