Fri, Apr 19, 2024, 10:43 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -123,10 +123,10 @@
                                 //let strparam = '/add?name=' + name + '&date=' + date;
                                 let response = await fetch('/add', {
                                     method:'GET',
-                                    body: {
+                                    body: JSON.stringify({
                                         'name': name,
                                         'date': date
-                                        }
+                                        })
                                     }); // variable response
                                 let responset = await response.text();
 
