--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -14,9 +14,11 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
+                <form class="form">
                     <input class="nameget" id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
                     <input class="dateget" id="inputdate" type="date" name="date" required>
                     <button id="inputbutton" type="submit">Submit</button>
+                </form>
                 <div id="response"></div>
 
             </div>
@@ -119,18 +121,20 @@
                                 }
                             }
 
-                            async function addrecord(namein, datein) {
-                                //let strparam = '/add?name=' + name + '&date=' + date;
-                                let response = await fetch('/add', {
-                                    method:'GET',
-                                    headers: {
-                                        'Content-Type': 'application/json'
-                                    },
-                                    body: JSON.stringify({
-                                        name: namein,
-                                        date: datein
-                                        })
-                                    }); // variable response
+                            async function addrecord(name, date) {
+                                let strparam = '/add?name=' + name + '&date=' + date;
+
+                                let response = await fetch(strparam);
+//                                let response = await fetch('/add', {
+//                                    method:'GET',
+//                                    headers: {
+//                                        'Content-Type': 'application/json'
+//                                    },
+//                                    body: JSON.stringify({
+//                                        name: namein,
+//                                        date: datein
+//                                        })
+//                                    }); // variable response
                                 let responset = await response.text();
 
                                 document.querySelector('#response').innerHTML = responset;
