--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -166,8 +166,8 @@
                             // addlistener to main submit button
                             let formEl = document.querySelector('.form');
                             document.addEventListener('DOMContentLoaded', function() {
-                                formEl.addEventListener('submit', event => { // prevent the default form submission
-                                    event.preventDefault();
+                                formEl.addEventListener('submit', event => { // function w parameter 'event', where {...}
+                                    event.preventDefault(); // prevent the default form submission
 
                                     const formData = new FormData(formEl); // auto extract data from form, FormData
                                     addrecord(formData.get('name'), formData.get('date'));
