--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -170,6 +170,7 @@
                                     event.preventDefault(); // prevent the default form submission
 
                                     const formData = new FormData(formEl); // auto extract data from form, FormData
+                                    console.log(formData.get('name'));
                                     addrecord(formData.get('name'), formData.get('date'));
 
                                 });
