Fri, Apr 19, 2024, 11:29 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -130,10 +130,7 @@
                                     headers: {
                                         'Content-Type': 'application/json'
                                     },
-                                    body: JSON.stringify({
-                                        name: namein,
-                                        date: datein
-                                        })
+                                    body: data
                                     }); // variable response
                                 let responset = await response.text();
 
