Fri, Apr 19, 2024, 11:49 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -130,11 +130,11 @@
                                     headers: {
                                         'Content-Type': 'application/json'
                                     },
-                                    body: data
+                                    body: JSON.stringify(data)
                                     }); // variable response
-                                let responset = await response.text();
+//                                let responset = await response.text();
 
-                                document.querySelector('#response').innerHTML = responset;
+//                                document.querySelector('#response').innerHTML = responset;
                                 fetchlist();
                             }
 
