Fri, Apr 19, 2024, 12:01 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -15,8 +15,8 @@
 
                 <h2>Add a Birthday</h2>
                 <form class="form">
-                    <input class="nameget" id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name" required>
-                    <input class="dateget" id="inputdate" type="date" name="date" required>
+                    <input class="nameget" id="inputname" type="text" autocomplete=off autofocus placeholder="Name" name="name">
+                    <input class="dateget" id="inputdate" type="date" name="date">
                     <button id="inputbutton" type="submit">Submit</button>
                 </form>
                 <div id="response"></div>
