Fri, Apr 19, 2024, 1:37 PM +08:00

--- a/finance/templates/register.html
+++ b/finance/templates/register.html
@@ -22,7 +22,7 @@
     <script>
 
         let formEl = document.querySelector('#form');
-        formEl.addEventListener('submit', event => {
+        formEl.addEventListener('submit', async function(event) {
             event.preventDefault();
 
             const formdata = new Formdata(formEl);
